--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,7 +64,7 @@ Documentation = "https://github.com/princeps/brain#readme"
 
 [tool.setuptools.packages.find]
 where = ["."]
-include = ["brain*"]
+include = ["brain*", "framework*"]
 
 [tool.black]
 line-length = 100
@@ -87,3 +87,5 @@ ignore_missing_imports = true
 testpaths = ["tests"]
 python_files = ["test_*.py"]
 addopts = "-v --tb=short"
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
